@@ -1,0 +1,5 @@
+/.debhelper/
+/files
+/*-stamp
+/*.substvars
+/uoproxy/
