@@ -1,68 +1,5 @@
 #!/usr/bin/make -f
 # -*- mode: makefile; coding: utf-8 -*-
 
-# Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
-
-CFLAGS = -Wall -g
-
-ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
-  CFLAGS += -O0
-else
-  CFLAGS += -O2 -fno-strict-aliasing
-endif
-
-build: debian/stamp-build
-debian/stamp-build:
-	dh_testdir
-
-	$(MAKE) CC=/usr/bin/gcc CFLAGS="$(CFLAGS)" all doc/uoproxy.html
-
-	touch debian/stamp-build
-
-clean:
-	dh_testdir
-	dh_testroot
-	rm -f debian/stamp-*
-
-	$(MAKE) clean
-
-	dh_clean
-
-install: debian/stamp-install
-debian/stamp-install: debian/stamp-build
-	dh_testdir
-	dh_testroot
-	dh_clean -k
-	dh_installdirs
-
-	#$(MAKE) DESTDIR=`pwd`/debian/tmp install
-
-	touch debian/stamp-install
-
-# Build architecture-independent files here.
-binary-indep:
-
-# Build architecture-dependent files here.
-binary-arch: build install
-	dh_testdir -a
-	dh_testroot -a
-	dh_installdocs -a -A README TODO doc/uoproxy.html
-	dh_installchangelogs -a
-	dh_installinit -a
-	dh_install -a
-	dh_link -a
-	dh_strip -a
-	dh_compress -a
-	dh_fixperms -a
-	dh_installdeb -a
-	dh_shlibdeps -a
-	dh_gencontrol -a
-	dh_md5sums -a
-	dh_builddeb -a
-
-source diff:                                                                  
-	@echo >&2 'source and diff are obsolete - use dpkg-source -b'; false
-
-binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary install
+%:
+	dh $@
