@@ -1,5 +1,6 @@
 uoproxy (0.5) unstable; urgency=medium
 
+  * build with Meson/ninja
   * fix libevent API breakage
   * fix character creation with antispy
 
